// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VueThreeTestRenderer Core > can render a composite component & correctly build simple graph 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "name": "",
        "type": undefined,
      },
      {
        "children": [
          {
            "children": [],
            "name": "",
            "type": "BoxGeometry",
          },
          {
            "children": [],
            "name": "",
            "type": "MeshBasicMaterial",
          },
        ],
        "name": "",
        "type": "Mesh",
      },
    ],
    "name": "",
    "type": "Group",
  },
]
`;

exports[`VueThreeTestRenderer Core > correctly builds a tree 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "props": {
          "args": [
            0,
            0,
            255,
          ],
          "attach": "background",
        },
        "type": "color",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "props": {
                  "args": [
                    Float32Array [
                      -1,
                      -1,
                      1,
                      1,
                      -1,
                      1,
                      1,
                      1,
                      1,
                      1,
                      1,
                      1,
                      -1,
                      1,
                      1,
                      -1,
                      -1,
                      1,
                    ],
                    3,
                  ],
                  "attach": "attributes-position",
                },
                "type": "bufferAttribute",
              },
            ],
            "props": {
              "attach": "geometry",
            },
            "type": "bufferGeometry",
          },
          {
            "children": [],
            "props": {
              "attach": "material",
              "color": "hotpink",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {},
        "type": "mesh",
      },
    ],
    "props": {
      "position": [
        1,
        2,
        3,
      ],
    },
    "type": "group",
  },
]
`;

exports[`VueThreeTestRenderer Core > handles primitive objects and their children correctly in toGraph 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "name": "",
        "type": "BoxGeometry",
      },
      {
        "children": [],
        "name": "",
        "type": "MeshBasicMaterial",
      },
    ],
    "name": "RegularMesh",
    "type": "Mesh",
  },
  {
    "children": [
      {
        "children": [],
        "name": "PrimitiveChildMesh",
        "type": "Mesh",
      },
      {
        "children": [
          {
            "children": [],
            "name": "NestedMesh",
            "type": "Mesh",
          },
        ],
        "name": "NestedGroup",
        "type": "Group",
      },
    ],
    "name": "PrimitiveGroup",
    "type": "Group",
  },
]
`;

exports[`VueThreeTestRenderer Core > toTree() handles complicated tree of fragments 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "props": {
          "args": [
            0,
            0,
            0,
          ],
          "attach": "background",
        },
        "type": "color",
      },
    ],
    "props": {},
    "type": "group",
  },
  {
    "children": [
      {
        "children": [],
        "props": {
          "args": [
            0,
            0,
            255,
          ],
          "attach": "background",
        },
        "type": "color",
      },
    ],
    "props": {},
    "type": "group",
  },
  {
    "children": [
      {
        "children": [],
        "props": {
          "args": [
            255,
            0,
            0,
          ],
          "attach": "background",
        },
        "type": "color",
      },
    ],
    "props": {},
    "type": "group",
  },
]
`;

exports[`VueThreeTestRenderer Core > toTree() handles nested Fragments 1`] = `
[
  {
    "children": [],
    "props": {},
    "type": "group",
  },
]
`;

exports[`VueThreeTestRenderer Core > updates children 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                2,
                2,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "key": "a",
          "position-z": 12,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                4,
                4,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "key": "b",
          "position-y": 12,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                6,
                6,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "key": "c",
          "position-x": 12,
        },
        "type": "mesh",
      },
    ],
    "props": {},
    "type": "group",
  },
]
`;

exports[`VueThreeTestRenderer Core > updates children 2`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                6,
                6,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "key": "d",
          "rotation-x": 1,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                4,
                4,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "key": "b",
          "position-y": 12,
        },
        "type": "mesh",
      },
      {
        "children": [
          {
            "children": [],
            "props": {
              "args": [
                2,
                2,
              ],
              "attach": "geometry",
            },
            "type": "boxGeometry",
          },
          {
            "children": [],
            "props": {
              "attach": "material",
            },
            "type": "meshBasicMaterial",
          },
        ],
        "props": {
          "key": "c",
          "position-x": 12,
        },
        "type": "mesh",
      },
    ],
    "props": {},
    "type": "group",
  },
]
`;
